remove empty newlines and accept deprecated (#4)